--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,30 @@
 ###Komodo IDE/Edit###
 *.komodoproject
 .komodotools
+
+##Python Files##
+__pycache__/
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+##Export.json variants##
+*export*.json
